More (potential) programming problems tagging and/or removal.